<resources>
    <string name="app_name">mingle</string>
    <string name="sign_in">sign in</string>
    <string name="password">password</string>
    <string name="usu_rio">usuário</string>
    <string name="mingle">mingle</string>
    <string name="sign_up">sign up</string>
    <string name="mostrar_password">mostrar a password</string>
    <string name="main_color">mostrar a password</string>
    <string name="charts">charts</string>
    <string name="camera">anota</string>
    <string name="friends">friends</string>
    <string name="title_activity_mingle_detail_host">mingleDetailHostActivity</string>
    <string name="title_mingle_list">mingles</string>
    <string name="title_mingle_detail">mingle Detail</string>
    <string name="profile_image">Profile Image</string>
    <string name="nome_nome">Nome Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="r_0_00">R$ 0,00</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="prompt_email">email</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in">sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">not a valid username</string>
    <string name="invalid_password">password must be >5 characters</string>
    <string name="passwords_not_match">passwords do not match</string>
    <string name="signin_failed">"sign in failed"</string>
    <string name="signup_failed">"sign in failed"</string>
    <string name="mingle_logo">mingle logo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="hello">hello 👋🏻</string>
    <string name="jane_doe">jane doe</string>
    <string name="rs">BRL</string>
    <string name="_100">100</string>
    <string name="balance">balance:</string>
    <string name="_00">,00</string>
    <string name="friends_name">friends name</string>
    <string name="dez_janjos">R$ 10,00</string>
    <string name="mingle_status">pago</string>
    <string name="your_mingles">your mingles:</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="confirm_password">confirm password</string>
    <string name="username">username</string>
    <string name="change_profile_picture">chnge profile picture</string>
    <string name="edit_name">edit name</string>
    <string name="date_of_birth">date_of_birth</string>
    <string name="pronouns">pronouns</string>
    <string name="zip_code">zip code</string>
    <string name="currency">currency</string>
    <string name="notifications">notifications</string>
    <string name="settings">settings</string>
    <string name="save">save</string>
    <string name="me">me</string>
    <string name="note">note</string>
    <string name="home">home</string>
    <string name="edit_profile">edit profile</string>
    <string name="_01_01_2020">01/01/2020</string>
    <string name="mingler_since">mingler since</string>
    <string name="_01_01_1990">01/01/1990</string>
    <string name="birthday">birthday</string>
    <string name="jane_doe_example_com">jane.doe@example.com</string>
    <string name="email">email</string>
    <string name="user_name">user name</string>
    <string name="she_her">she/her</string>
    <!-- TODO Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_email">change email</string>
    <string name="display_name">display name</string>
    <string name="edit">edit</string>
    <string name="this_is">this is</string>
    <string name="new_mingle_item">new mingle item</string>
    <string name="friends_email">friends email</string>
    <string name="amount">amount</string>
    <string name="description">description</string>
    <string name="type">type</string>
    <string name="create_a_new_mingle">create a new mingle</string>
    <string name="take_photo">take photo</string>
    <string name="upload_photo">upload photo</string>
    <string name="choose_image_source">choose image source</string>
    <string name="gallery">gallery</string>
    <string name="camera_">camera</string>
    <string name="logout">logout</string>
</resources>