<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="50dp"
    android:background="@color/background"
    android:orientation="horizontal"
    android:padding="28dp">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/profile_image"
        android:scaleType="centerCrop"
        android:shape="oval"
        android:src="@drawable/ic_profile_placeholder" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_nome"
            android:textColor="@color/primary_variant"
            android:textColorLink="@color/tertiary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sobrenome"
            android:textColor="@color/primary_variant" />
    </LinearLayout>

    <TextView
        android:id="@+id/user_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:fontFamily="@font/aoboshi_one"
        android:text="@string/r_0_00"
        android:textSize="18sp" />
</LinearLayout>