<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/on_primary"
    android:textAlignment="center"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.profile.ProfileFragment">

    <RelativeLayout
        android:id="@+id/profileHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_16sdp"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp">

        <TextView
            android:id="@+id/helloTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_regular"
            android:text="@string/this_is"
            android:textColor="@color/black"
            android:textSize="@dimen/_24sdp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_26sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/userNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/helloTextView"
            android:fontFamily="@font/roboto_thin"
            android:textColor="@color/black"
            android:textSize="@dimen/_26sdp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            app:cardCornerRadius="@dimen/_360sdp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/circular_shape"
                android:contentDescription="@string/profile_image"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_user_icon"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/profileScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="@dimen/_16sdp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileHeader">

        <LinearLayout
            android:id="@+id/profileContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAppearance="@style/BaseTextAppearance"
                android:layout_marginTop="12dp" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="18sp"
                android:textAppearance="@style/BaseTextAppearance"
                android:textStyle="bold"
                android:layout_marginTop="12dp" />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                android:textSize="18sp"
                android:textAppearance="@style/BaseTextAppearance"
                android:textStyle="bold"
                android:layout_marginTop="12dp" />

            <TextView
                android:id="@+id/birthdayTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pronouns"
                android:textSize="18sp"
                android:textAppearance="@style/BaseTextAppearance"
                android:textStyle="bold"
                android:layout_marginTop="12dp" />

            <TextView
                android:id="@+id/pronounsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mingler_since"
                android:textSize="18sp"
                android:textAppearance="@style/BaseTextAppearance"
                android:textStyle="bold"
                android:layout_marginTop="12dp" />

            <TextView
                android:id="@+id/minglerSinceTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp" />

            <Button
                android:id="@+id/editProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/edit_profile"
                android:drawableStart="@drawable/ic_edit_pen"
                android:drawablePadding="8dp"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>